# pslab-web

./: next.config.mjs  package-lock.json  package.json
app/: page.tsx
pslab-wasm/: Cargo.toml
pslab-wasm/src/: lib.rs
src/: PSLab.tsx
