[package]
name = "pslab-wasm"
version = "0.1.0"
authors = ["Daniel Maslowski <info@orangecms.org>"]
edition = "2018"
description = "PSLab Wasm ..."
repository = "git..."
license = "GPLv2"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.69", features = [
  "Navigator",
  "ReadableStream",
  "Serial",
  "SerialPort",
  "SerialOptions",
  "Window"
] }
wasm-streams = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
js-sys = "0.3.69"
gloo-utils = { version = "0.2.0", features = ["serde"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
